Improvement in pair construction logic